src/static/stylesheets/media_properties/common.module.scss
/* ... */
.attribute-filter {
  @include page-fade-in(1s);

  max-width: 100%;
  min-height: max-content;
  padding: 20px;
  user-select: none;
  width: max-content;

  &__attribute--box {
    border: 1px solid var(--property-text-secondary);
    border-radius: var(--property-filter-border-radius);
    color: var(--property-text-secondary);
    flex-grow: 1;
    font-weight: 600;
    letter-spacing: 0.05rem;
    min-width: 150px;
    padding: 5px 10px;
    transition: border 0.25s ease, background-color 0.25s ease;
    white-space: nowrap;

    &.attribute-filter__attribute--active {
      background-color: var(--property-filter-color);
      border: 1px solid var(--property-filter-color);
      color: black;
    }
  }

  &__attribute--text {
    align-items: center;
    color: var(--property-text-faded);
    display: flex;
    font-size: 1.2em;
    font-weight: 600;
    justify-content: center;
    padding-bottom: 3px;
    transition: color 0.25s ease;

    &.attribute-filter__attribute--active {
      color: var(--property-text-primary);
    }
  }

  &__attribute--image {
    border-radius: 13px;
    display: flex;
    height: auto;
    max-height: 150px;
    max-width: 150px;
    opacity: 0.5;
    overflow: hidden;
    transition: opacity 0.25s ease;
    width: auto;

    &:hover {
      opacity: 0.75;
    }

    &.attribute-filter__attribute--active {
      opacity: 1;
    }
  }

  &__attribute-image {
    height: 100%;
    max-height: 100%;
    max-width: 100%;
    object-fit: cover;
    width: max-content;
  }

  &--secondary {
    .attribute-filter__attribute--image {
      max-height: 75px;
      max-width: 75px;
    }
  }

  @media screen and (width <= 800px) {
    &__attribute--box {
      font-size: 14px;
      min-width: 100px;
    }

    &__attribute--text {
      font-size: 14px;
    }

    &__attribute--image {
      max-height: 75px;
    }
  }
}

.preview-password {
  display: flex;
  flex-direction: column;
  gap: 20px;
  max-width: 400px;
  min-width: 400px;
  width: 100%;

  &__label {
    color: var(--property-text-secondary);
    font-size: 14px;
    text-align: center;
  }

  &__input {
    height: 45px;

    * {
      text-align: center;
    }
  }

  &__actions {
    align-items: center;
    display: flex;
    gap: 10px;
    justify-content: flex-end;
  }

  &__action {
    flex: 1 1 0;
  }

  @media screen and (width <= 600px) {
    height: calc(50 * var(--vh));
    justify-content: center;
    margin: 0 auto;
    min-width: 100%;
  }
}

